--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/ --require babel-polyfill --require babel-register",
     "dev": "gulp dev"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/core": "^7.15.8",
     "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
