--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/ --require babel-polyfill --require babel-register",
-    "dev": "gulp dev"
+    "test": "gulp build && mocha tests/ --require babel-register",
+    "lonetest": "mocha tests/ --require babel-register",
+    "dev": "gulp dev",
+    "newtest": "gulp --require babel/register buildtest",
+    "gtest": "gulp notest"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +24,8 @@
     "sharp": "^0.29.2"
   },
   "devDependencies": {
+    "gulp-mocha": "^8.0.0",
+    "merge-stream": "^2.0.0",
     "mocha": "^9.1.3"
   }
 }
